
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================
Changes up to 0.88

   * added map support to roving facility

   * enabled distance objects to persist through redefinition

   * fixed various geometry and rendering glitches with cartoon ribbons

   * ray_interior_texture, ray_interior_shadows

   * get command allows settings to be queried from the command line

   * added angle and shift options onto "ray" command for stereo figures
     (this automatically adjusts the light position)

   * added walleye stereo support

   * can now pick and rotate bonds with a single click-and-drag

   * overhauled map_new, isomesh, isosurface.  added new test case

   * scene commands

   * "rep" option in selector

   * $TUT environment variable points at $PYMOL_PATH/data/tut

   * fixed quadro stereo support with sessions...

   * cartoon_highlight_color now provides Molscript-like cartoon coloring
     which provides for an alternate color inside of helices and on the
     sides of beta strands.

   * ray_interior_color can enable solid interiors in the ray tracer!

   * fixed truncation error in view matrix composition.

   * Roving details. Many new settings.

   * Roving origin.

   * Added ribbon_color, cartoon_color settings.

   * overhauled color menu, improved performance of rainbow and color by chain

   * added color space menu to Tcl/Tk Ext. GUI

   * added color space clamping to better enable CMYK color matching as well
     as improve rendering quality

   * added z-ordered transparency (nice!) with menu controls

   * finished session save support for color ramps and gadgets

   * debugged and tested Quadro hardware support
