@@ -45,7 +45,7 @@ void EditorHFill(void);
 void EditorCycleValence(void);
 void EditorInactive(void);
 ObjectMolecule *EditorGetActiveObject(void);
-int EditorSelect(char *s0,char *s1,char *s2,char *s3,int pkresi);
+int EditorSelect(char *s0,char *s1,char *s2,char *s3,int pkresi,int quiet);
 int EditorTorsion(float angle);
 int EditorInvert(ObjectMolecule *obj,int isele0,int isele1,int mode);
 
