@@ -4410,14 +4410,15 @@ static PyObject *CmdEdit(PyObject *self, 	PyObject *args)
   OrthoLineType s3 = "";
   int pkresi;
   int ok=false;
-  ok = PyArg_ParseTuple(args,"ssssi",&str0,&str1,&str2,&str3,&pkresi);
+  int quiet;
+  ok = PyArg_ParseTuple(args,"ssssii",&str0,&str1,&str2,&str3,&pkresi,&quiet);
   if (ok) {
     APIEntry();
     if(str0[0]) SelectorGetTmp(str0,s0);
     if(str1[0]) SelectorGetTmp(str1,s1);
     if(str2[0]) SelectorGetTmp(str2,s2);
     if(str3[0]) SelectorGetTmp(str3,s3);
-    ok = EditorSelect(s0,s1,s2,s3,pkresi);
+    ok = EditorSelect(s0,s1,s2,s3,pkresi,quiet);
     if(s0[0]) SelectorFreeTmp(s0);
     if(s1[0]) SelectorFreeTmp(s1);
     if(s2[0]) SelectorFreeTmp(s2);
