@@ -286,6 +286,8 @@ if __name__=='pymol.setting':
       roving_isomesh        = 252
       roving_isosurface     = 253
       scenes_changed        = 254
+      gaussian_lambda       = 255
+      
       
       
    setting_sc = Shortcut(SettingIndex.__dict__.keys())
